--- a/src/client/styles/style.css
+++ b/src/client/styles/style.css
@@ -1,7 +1,7 @@
 .base{
   width: 100%;
   height: 100vh;
-  background: linear-gradient(to bottom, #856C59 1%, transparent 50%), url('../images/home-hero.jpg') no-repeat;
+  background: linear-gradient(to bottom, #856C59 1%, transparent 60%), url('../images/home-hero.jpg') no-repeat;
   background-size: cover;
 }
 
@@ -14,10 +14,25 @@
 
 nav{
   position: relative;
+  width: 100%;
+  margin: 5px auto;
+}
 
+nav > ul{
+  list-style-type: none;
+  text-align: center;
+}
+
+nav > ul > li{
+  display: inline-block;
+  font-family: mila-script-sans-regular;
+  text-transform: uppercase;
+  color: #F0F0F0;
+  font-size: 18px;
+  padding: 15px 30px;
 }
 
 h1{
-  font-family: 'mila-script-pro';
+  font-family: mila-script-pro;
 
 }
