--- a/src/client/styles/style.css
+++ b/src/client/styles/style.css
@@ -1,6 +1,31 @@
-a {
-  text-decoration: none;
+.base{
+  width: 100%;
+  height: 100vh;
+  background: linear-gradient(to bottom, #856C59 1%, transparent 60%), url('../images/home-hero.jpg') no-repeat;
+  background-size: cover;
 }
+
+.story{
+  width: 100%;
+  height: 100vh;
+  background: linear-gradient(to bottom, #E4D0C9 1%, transparent 60%), url('../images/story-hero.jpg') no-repeat;
+  background-size: cover;
+}
+
+.details{
+  width: 100%;
+  height: 100vh;
+  background: linear-gradient(to bottom, #E4D0C9 1%, transparent 60%), url('../images/story-hero.jpg') no-repeat;
+  background-size: cover;
+}
+
+.contact{
+  width: 100%;
+  height: 100vh;
+  background: linear-gradient(to bottom, #E4D0C9 1%, transparent 60%), url('../images/contact-hero.jpg') no-repeat;
+  background-size: cover;
+}
+
 .gsl-logo{
   width: 100%;
   height: auto;
