--- a/src/client/styles/style.css
+++ b/src/client/styles/style.css
@@ -15,14 +15,14 @@
 .details{
   width: 100%;
   height: 100vh;
-  background: linear-gradient(to bottom, #E4D0C9 1%, transparent 60%), url('../images/story-hero.jpg') no-repeat;
+  background: linear-gradient(to bottom, #E4D0C9 1%, transparent 60%), url('../images/details-hero.jpg') no-repeat;
   background-size: cover;
 }
 
 .contact{
   width: 100%;
   height: 100vh;
-  background: linear-gradient(to bottom, #E4D0C9 1%, transparent 60%), url('../images/contact-hero.jpg') no-repeat;
+  background: linear-gradient(to bottom, #7F7F7F 1%, transparent 60%), url('../images/contact-hero.jpg') no-repeat;
   background-size: cover;
 }
 
@@ -56,4 +56,13 @@ nav > ul > li{
 h1{
   font-family: mila-script-pro;
 
+}
+
+a{
+  color: white;
+  text-decoration: none;
+}
+
+a:active{
+  
 }
