--- a/src/client/styles/style.css
+++ b/src/client/styles/style.css
@@ -6,22 +6,23 @@
 }
 
 .story{
+  position:relative;
   width: 100%;
-  height: 100vh;
+  height: 90vh;
   background: linear-gradient(to bottom, #CFC7CA 1%, transparent 60%), url('../images/story-hero.jpg') no-repeat;
   background-size: cover;
 }
 
 .details{
   width: 100%;
-  height: 100vh;
+  height: 90vh;
   background: linear-gradient(to bottom, #CFC7CA 1%, transparent 60%), url('../images/details-hero.jpg') no-repeat;
   background-size: cover;
 }
 
 .contact{
   width: 100%;
-  height: 100vh;
+  height: 90vh;
   background: linear-gradient(to bottom, #CFC7CA 1%, transparent 60%), url('../images/contact-hero.jpg') no-repeat;
   background-size: cover;
 }
@@ -31,6 +32,30 @@
   height: auto;
   position: relative;
   top: 15px;
+}
+
+.kraft-section{
+  width: 100%;
+  position: relative;
+  height: 228px;
+  background: url('../images/kraftpaper.jpg') no-repeat;
+  background-size: cover;
+}
+
+.vertical-align-wrap {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  display: table;
+  background-color: transparent;
+}
+
+.vertical-align {
+  display: table-cell;
+}
+
+.vertical-align--middle {
+  vertical-align: middle;
 }
 
 nav{
@@ -53,9 +78,14 @@ nav > ul > li{
   padding: 15px 30px;
 }
 
-h1{
-  font-family: mila-script-pro;
-
+h2{
+  font-family: mila-script-sans-regular;
+  font-size: 20px;
+  text-align: center;
+  color: black;
+  margin: 0 auto;
+  line-height: 30px;
+  padding: 0 15%;
 }
 
 a{
@@ -64,5 +94,36 @@ a{
 }
 
 .active{
-  color: #F6DBDB !important;
+  color: #000000;
+}
+
+@media(max-width:1420px){
+  .details, .story, .contact{
+    height: 50vh;
+  }
+}
+
+@media(max-width:885px){
+  .details, .story, .contact{
+    height: 40vh;
+  }
+
+  nav > ul{
+    padding: 0;
+  }
+
+  nav > ul > li{
+    font-size: 14px;
+    padding: 15px;
+  }
+}
+
+@media(max-width:600px){
+  .details, .story, .contact{
+    height: 35vh;
+  }
+  h2{
+    font-size: 16px;
+    line-height: 26px;
+  }
 }
