--- a/src/client/styles/style.css
+++ b/src/client/styles/style.css
@@ -27,6 +27,13 @@
   background-size: cover;
 }
 
+.footer{
+  width: 100%;
+  height: 188px;
+  background: url('../images/footer.jpg') no-repeat;
+  background-size: cover;
+}
+
 .gsl-logo{
   width: 100%;
   height: auto;
@@ -56,6 +63,11 @@
 
 .vertical-align--middle {
   vertical-align: middle;
+}
+
+.container{
+  width: 100%;
+  padding: 300px;
 }
 
 nav{
