--- a/src/client/styles/style.css
+++ b/src/client/styles/style.css
@@ -66,7 +66,7 @@
 }
 
 .container{
-  padding: 300px;
+  padding: 60px;
 }
 
 nav{
@@ -87,6 +87,13 @@ nav > ul > li{
   color: #F0F0F0;
   font-size: 18px;
   padding: 15px 30px;
+}
+
+h1{
+  font-family: mila-script-basic;
+  color: black;
+  font-size: 80px;
+  text-align: center;
 }
 
 h2{
