--- a/src/client/styles/style.css
+++ b/src/client/styles/style.css
@@ -1,31 +1,31 @@
-.base{
-  width: 100%;
-  height: 100vh;
-  background: linear-gradient(to bottom, #856C59 1%, transparent 60%), url('../images/home-hero.jpg') no-repeat;
-  background-size: cover;
-}
+/*.home{*/
+  /*width: 100%;*/
+  /*height: 100vh;*/
+  /*background: linear-gradient(to bottom, #856C59 1%, transparent 60%), url('../images/home-hero.jpg') no-repeat;*/
+  /*background-size: cover;*/
+/*}*/
 
-.story{
-  position:relative;
-  width: 100%;
-  height: 90vh;
-  background: linear-gradient(to bottom, #CFC7CA 1%, transparent 60%), url('../images/story-hero.jpg') no-repeat;
-  background-size: cover;
-}
+/*.story{*/
+  /*position:relative;*/
+  /*width: 100%;*/
+  /*height: 90vh;*/
+  /*background: linear-gradient(to bottom, #CFC7CA 1%, transparent 60%), url('../images/story-hero.jpg') no-repeat;*/
+  /*background-size: cover;*/
+/*}*/
 
-.details{
-  width: 100%;
-  height: 90vh;
-  background: linear-gradient(to bottom, #CFC7CA 1%, transparent 60%), url('../images/details-hero.jpg') no-repeat;
-  background-size: cover;
-}
+/*.details{*/
+  /*width: 100%;*/
+  /*height: 90vh;*/
+  /*background: linear-gradient(to bottom, #CFC7CA 1%, transparent 60%), url('../images/details-hero.jpg') no-repeat;*/
+  /*background-size: cover;*/
+/*}*/
 
-.contact{
-  width: 100%;
-  height: 90vh;
-  background: linear-gradient(to bottom, #CFC7CA 1%, transparent 60%), url('../images/contact-hero.jpg') no-repeat;
-  background-size: cover;
-}
+/*.contact{*/
+  /*width: 100%;*/
+  /*height: 90vh;*/
+  /*background: linear-gradient(to bottom, #CFC7CA 1%, transparent 60%), url('../images/contact-hero.jpg') no-repeat;*/
+  /*background-size: cover;*/
+/*}*/
 
 .footer{
   width: 100%;
@@ -132,13 +132,13 @@ a{
 }
 
 @media(max-width:1420px){
-  .details, .story, .contact{
+  .background{
     height: 50vh;
   }
 }
 
 @media(max-width:885px){
-  .details, .story, .contact{
+  .background{
     height: 40vh;
   }
 
@@ -153,7 +153,7 @@ a{
 }
 
 @media(max-width:600px){
-  .details, .story, .contact{
+  .background{
     height: 35vh;
   }
   h2{
