--- a/src/client/styles/style.css
+++ b/src/client/styles/style.css
@@ -131,6 +131,10 @@ a{
   color: #000000;
 }
 
+.background.home{
+  height: 100vh !important;
+}
+
 @media(min-width:1421px){
   .background{
     height: 90vh;
@@ -140,6 +144,12 @@ a{
 @media(max-width:1420px){
   .background{
     height: 50vh;
+  }
+}
+
+@media(max-width:1000px){
+  .background.home > div{
+    background-position: center !important;
   }
 }
 
@@ -160,7 +170,7 @@ a{
 
 @media(max-width:600px){
   .background{
-    height: 35vh;
+    height: 55vh;
   }
   h2{
     font-size: 16px;
