fixing some mobile sizing

--- a/src/client/styles/style.css
+++ b/src/client/styles/style.css
@@ -172,8 +172,17 @@ a{
   .background{
     height: 55vh;
   }
+  .container{
+    padding: 25px 5px;
+  }
+  h1{
+    font-size: 40px;
+  }
   h2{
     font-size: 16px;
     line-height: 26px;
+  }
+  .logo{
+    width: 100px;
   }
 }
