contact form styles

--- a/src/client/styles/style.css
+++ b/src/client/styles/style.css
@@ -135,6 +135,75 @@ a{
   height: 100vh !important;
 }
 
+.contact-footer{
+  position: relative;
+  background-image: url('../images/contact-footer.jpg');
+  width: 100%;
+  height: 758px;
+}
+
+.form-wrapper{
+  padding: 100px 250px;
+  text-align: center;
+}
+
+input, textarea{
+  background-color: #9A7545;
+  opacity: .6;
+  display: block;
+  width: 100%;
+  box-shadow: none;
+  border: none;
+  margin: 20px 0 0 0;
+  font-family: mila-script-sans-regular;
+  font-size: 18px;
+  border-radius: 5px;
+}
+
+input{
+  height: 38px;
+}
+
+input:focus{
+    outline: -webkit-focus-ring-color #EAE4B1 5px;
+}
+
+::-webkit-input-placeholder {
+   color: black;
+}
+
+:-moz-placeholder { /* Firefox 18- */
+   color: black;
+}
+
+::-moz-placeholder {  /* Firefox 19+ */
+   color: black;
+}
+
+:-ms-input-placeholder {
+   color: black;
+}
+
+textarea{
+  height: 150px;
+}
+
+button{
+  background-color: #EAE4B1;
+  padding: 15px 30px;
+  font-family: mila-script-sans-regular;
+  font-size: 20px;
+  color: #A3805F;
+  border: none;
+  box-shadow: none;
+  transition: 0.2s all;
+  margin: 25px 0 0 0;
+}
+
+button:hover{
+  background-color: #EACDB1;
+}
+
 @media(min-width:1421px){
   .background{
     height: 90vh;
@@ -172,6 +241,9 @@ a{
   .background{
     height: 55vh;
   }
+  .background > div{
+    background-position: center !important;
+  }
   .container{
     padding: 25px 5px;
   }
@@ -183,6 +255,7 @@ a{
     line-height: 26px;
   }
   .logo{
-    width: 100px;
+    padding: 50px;
+    width: 150px;
   }
 }
